estructura html y diseño css finalizado

--- a/style.css
+++ b/style.css
@@ -122,6 +122,49 @@ body{
   margin-left: 0.5rem;
 }
 
+#juego{
+  display: flex;
+  flex-direction: column;
+  min-height: 60vh;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#ahorcado{
+  width: 50%;
+  height: 60%;
+  margin-bottom: 3rem;
+}
+
+.word{
+  display: flex;
+  justify-content: center;
+}
+
+.letter{
+  margin: 0 0.5rem 0 0.5rem;
+}
+
+.letter img{
+  width: 4rem;
+}
+.letter p{
+  font-size: 3rem;
+  color: #0A3871;
+}
+
+.other{
+  display: flex;
+  justify-content: space-between;
+  font-size: 2rem;
+  color: #495057;
+  margin-bottom: 3rem;
+}
+
+.other p{
+  margin: 1rem;
+}
+
 @media (max-width: 768px) {
   :root {
     font-size: 12px;
@@ -134,10 +177,33 @@ body{
   }
   #titulo {
     left: 0;
-    margin-top: 5rem;
   }
   #agregar-palabra{
     max-width: 90%;
+  }
+  #ahorcado{
+    width: 100%;
+    height: 40vh;
+  }
+  .word{
+    width: 100%;
+  }
+  .letter{
+    margin: 0 0.25rem 0 0.25rem;
+  }
+  .letter img{
+    width: 3rem;
+  }
+  .letter p{
+    font-size: 2rem;
+    color: #0A3871;
+  }
+  .other{
+    display: flex;
+    justify-content: space-between;
+    font-size: 1rem;
+    color: #495057;
+    margin-bottom: 3rem;
   }
 }
 
@@ -145,4 +211,12 @@ body{
   #agregar-palabra{
     min-height: 80vh;
   }
+  #ahorcado{
+    width: 100%;
+    height: 40vh;
+  }  
+}
+
+.display-none{
+  display: none !important;
 }
